--- a/PowerLogViewer/PowerLogViewer/PowerLogViewer.csproj
+++ b/PowerLogViewer/PowerLogViewer/PowerLogViewer.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BusinessObjects\LogEntry.cs" />
     <Compile Include="Controller\ApplicationCacheController.cs" />
     <Compile Include="Controller\FileImportController.cs" />
+    <Compile Include="Converters\RemoveNewLineConverter.cs" />
     <Compile Include="EventArgsClasses\ImportFileDialogEventArgs.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
