--- a/PowerLogViewer/PowerLogViewer/PowerLogViewer.csproj
+++ b/PowerLogViewer/PowerLogViewer/PowerLogViewer.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BusinessObjects\Bookmark.cs" />
     <Compile Include="BusinessObjects\DatagridColumnConfigSettings.cs" />
     <Compile Include="BusinessObjects\LogEntry.cs" />
     <Compile Include="Controller\ApplicationCacheController.cs" />
